--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">.GovJobs</string>
+
+    <string name="action_settings">Settings</string>
+    
+    <!-- Account type (for sync-adapter authenticator) -->
+    <!-- SyncAdapter related -->
+    <string name="sync_account_type">govjobs.allendolph.com</string>
+    <string name="content_authority">com.allendolph.govjobs</string>
+
 </resources>
